--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/crypto-js": "^4.2.2",
     "@types/multer": "^1.4.13",
     "@types/nodemailer": "^6.4.17",
+    "@types/pdfjs-dist": "^2.10.377",
     "archiver": "^7.0.1",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
@@ -57,6 +58,7 @@
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
+    "pdfjs-dist": "^5.3.31",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
