--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@react-email/components": "^0.1.0",
     "@tanstack/react-query": "^5.80.7",
     "@types/archiver": "^6.0.3",
     "@types/bcrypt": "^5.0.2",
@@ -67,6 +68,7 @@
     "react-hot-toast": "^2.5.2",
     "react-swipeable": "^7.0.2",
     "recharts": "^2.15.3",
+    "resend": "^4.6.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.5",
