--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "cron-parser": "^5.3.0",
     "crypto-js": "^4.2.0",
     "extract-zip": "^2.0.1",
     "framer-motion": "^12.18.1",
