--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "db:seed": "tsx scripts/seed.ts"
   },
   "prisma": {
-    "seed": "tsx scripts/seed.ts"
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
@@ -35,6 +35,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@react-email/components": "^0.1.0",
+    "@react-email/render": "^1.1.2",
     "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-query": "^5.80.7",
     "@types/archiver": "^6.0.3",
@@ -80,6 +81,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@faker-js/faker": "^9.8.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
