--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/multer": "^1.4.13",
     "@types/nodemailer": "^6.4.17",
     "@types/pdfjs-dist": "^2.10.377",
+    "@vercel/blob": "^1.1.1",
     "archiver": "^7.0.1",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
@@ -56,6 +57,7 @@
     "cmdk": "^1.1.1",
     "cron-parser": "^5.3.0",
     "crypto-js": "^4.2.0",
+    "docx-preview": "^0.3.5",
     "extract-zip": "^2.0.1",
     "framer-motion": "^12.18.1",
     "html2canvas": "^1.4.1",
@@ -70,6 +72,7 @@
     "pdfjs-dist": "^5.3.31",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.57.0",
     "react-hot-toast": "^2.5.2",
     "react-swipeable": "^7.0.2",
