--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "contravo",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "dev:socket": "node server.js",
