--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@types/multer": "^1.4.13",
     "@types/nodemailer": "^6.4.17",
     "@types/pdfjs-dist": "^2.10.377",
-    "@vercel/blob": "^1.1.1",
+    "@uploadthing/react": "^7.3.2",
     "archiver": "^7.0.1",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
@@ -84,6 +84,7 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.7.3",
     "zod": "^3.25.61"
   },
   "devDependencies": {
