--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.7.3",
+    "uuid": "^11.1.0",
     "zod": "^3.25.61"
   },
   "devDependencies": {
@@ -94,6 +95,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
