--- a/package.json
+++ b/package.json
@@ -42,6 +42,20 @@
     "@react-email/render": "^1.1.2",
     "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-query": "^5.80.7",
+    "@tiptap/extension-bubble-menu": "^2.23.0",
+    "@tiptap/extension-floating-menu": "^2.23.0",
+    "@tiptap/extension-highlight": "^2.23.0",
+    "@tiptap/extension-link": "^2.23.0",
+    "@tiptap/extension-mention": "^2.23.0",
+    "@tiptap/extension-placeholder": "^2.23.0",
+    "@tiptap/extension-table": "^2.23.0",
+    "@tiptap/extension-table-cell": "^2.23.0",
+    "@tiptap/extension-table-header": "^2.23.0",
+    "@tiptap/extension-table-row": "^2.23.0",
+    "@tiptap/extension-text-align": "^2.23.0",
+    "@tiptap/extension-underline": "^2.23.0",
+    "@tiptap/react": "^2.23.0",
+    "@tiptap/starter-kit": "^2.23.0",
     "@types/archiver": "^6.0.3",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
@@ -67,6 +81,7 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.515.0",
+    "mammoth": "^1.9.1",
     "multer": "^2.0.1",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
