--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toggle": "^1.1.9",
     "@react-email/components": "^0.1.0",
     "@react-email/render": "^1.1.2",
     "@react-pdf/renderer": "^4.3.0",
